SET(IO_SRC_FILE_LIST
        io/io.cpp)

SET(GRAPH_SRC_FILE_LIST
        graph/graph.cpp)

SET(LOG_SRC_FILE_LIST
        log/log.cpp)

ADD_LIBRARY(io SHARED ${IO_SRC_FILE_LIST})

ADD_LIBRARY(graph SHARED ${GRAPH_SRC_FILE_LIST})
TARGET_LINK_LIBRARIES(graph PRIVATE OpenMP::OpenMP_CXX)

ADD_LIBRARY(log SHARED ${LOG_SRC_FILE_LIST})
TARGET_LINK_LIBRARIES(log PRIVATE OpenMP::OpenMP_CXX)
